<resources>
    <string name="app_name">Products &amp; Shops</string>
    <string name="main_menu_search_title">Search</string>
    <string name="img">img</string>
    <string name="shop_icon">shopIcon</string>
    <string name="shop_product1">shopProduct1</string>
    <string name="shop_product2">shopProduct2</string>
    <string name="shop_product3">shopProduct3</string>
    <string name="shop_reputation">shopReputation</string>
    <string name="shop_button"> + Favoritkan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_main">Cari di Tokopedia</string>
    <string name="search_product">Cari produk atau toko</string>
</resources>
