<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp">

    <LinearLayout
        android:id="@+id/list_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:background="#FFFFFF"
        android:gravity="center">

        <ImageView
            android:id="@+id/shopIcon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/shop_icon"/>

        <TextView
            android:id="@+id/shopName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"
            android:maxLines="1"
            tools:text="Shop Name"
            android:textColor="#000000"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/shopReputation"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/shop_reputation"/>

        <TextView
            android:id="@+id/shopLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            tools:text="Shop Location"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/shopProduct1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/shop_product1"/>

            <ImageView
                android:id="@+id/shopProduct2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/shop_product2"/>

            <ImageView
                android:id="@+id/shopProduct3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/shop_product3"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/shop_button"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>